Fixed white space issue, the problem is caused by middle image

--- a/css/index.css
+++ b/css/index.css
@@ -64,8 +64,11 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
+html{
+    font-size: 62.5%
+}
 .container {
-	width: 880px;
+	max-width: 880px;
 	/* TB LR */
 	margin: 0 auto;
   }
@@ -74,13 +77,13 @@ h1, h2, h3, h4, h5 {
   
   header nav {
 	display: flex;
-	width: 691px;
+	width: 78%;
 	margin-top: 35px;
 	justify-content: space-between;
   }
   
   header nav a {
-	font-size: 14px;
+	font-size: 1.4rem;
 	color: gray;
 	text-decoration: none;
   }
@@ -91,24 +94,25 @@ h1, h2, h3, h4, h5 {
   header {
 	  display:flex;
 	  justify-content: space-between;
-	  width: 920px;
+	  width: 100%;
 
   }
   header .logo {
 	display: inline-block;
-	margin-top: 25px;
+    margin-top: 25px;
+    margin-left: 5%;
   }
   
   /* cta */
   .cta{
-	  width: 920px;
+	  width: 100%;
 	  display: flex;
 	  justify-content: space-around;
   }
   .cta .cta-text {
 	display: inline-block;
 	vertical-align: top;
-	font-size: 77px;
+	font-size: 7.7rem;
 	margin-top: 120px;
 	text-align: center;
 	padding: 0px 75px;
@@ -119,7 +123,7 @@ h1, h2, h3, h4, h5 {
 	vertical-align: top;
 	margin-top: 6px;
 	padding: 8px 44px;
-	font-size: 17px;
+	font-size: 1.7rem;
 	border: 1px solid black;
 	cursor: pointer;
   }
@@ -135,35 +139,41 @@ h1, h2, h3, h4, h5 {
   }
   
   .main-content {
-	border-top: 1px solid black;
 	margin-top: 76px;
 	padding-top: 39px;
   }
   
   .main-content .top-content {
+    padding-top: 40px;
+    border-top: 1px solid black;
 	display:flex;
 	justify-content: space-between;
-
-
   }
-  
+  .main-content h4{
+      font-size: 2.4rem;
+  }
+  .main-content p{
+      font-size: 1.4rem;
+  }
   .main-content .top-content .text-content {
-	width: 410px;
+	width: 46%;
 
   }
   
   .main-content .middle-img {
+    width: 100%;
+    height:auto;
 	margin-top: 45px;
   }
   
   .main-content .bottom-content {
 	margin-top: 37px;
 	display:flex;
-	justify-content: space-between;
+    justify-content: space-between;
   }
   
   .main-content .bottom-content .text-content {
-	width: 275px;
+	width: 31%;
   }
   
   .contact {
@@ -173,81 +183,107 @@ h1, h2, h3, h4, h5 {
   }
   
   .contact p {
-	margin: 20px 0;
+    margin: 20px 0;
+    font-size: 1.4rem;
   }
-  
+  .contact h4{
+      font-size: 2.4rem;
+  }
   footer {
 	margin: 32px 0;
 	text-align: center;
 	font-size: 14px;
   }
 /* Media queries go here */
+/*tablet view start here   */
 @media only screen and (max-width: 800px) {  
+    /* disable image code sniplet */
     .cta img {
         display: none;
       }
+    /* change the width of the nav bar to 800 px, spread the content accross the new bar */
     header nav{
-        width: 800px;
+        width: 100%;
         justify-content: space-around;
-    
+        margin-left:0;
+        margin-right:0;  
     }
+    /* change header width to 800, change flex to column to reposition the logo */
     header{
         display: flex;
-        flex-direction: column;
-        width: 800px;
+        flex-wrap: wrap;
+        width: 100%;
+        justify-content: center;
+
     }
+    /* change logo order so it goes on top of the nav bar, reposition it to the center of the page */
     header .logo{
         order: -1;
         align-self: center;
+
     }
     .main-content .top-content .text-content {
-        width: 360px;
+        width: 41%;
     
       }
     .main-content{
-        width: 800px;
+        width: 100%;
+
     }
     .main-content .top-content{
         justify-content: space-around;
-        width: 800px;
+        max-width: 95%;
+        margin-right: 2.5%;
+        margin-left:2.5%;
     }
+    /* change middle image width to fit tablet view */
     .middle-img{
-        width: 760px;
+        width: 86%;
         height: auto;
-        margin-right: 20px;
-        margin-left:20px;
+        padding-right: 2.5%;
+        padding-left:2.5%;
+
     }
     .container{
-        width: 800px;
+        width: 100%;
+
     }
     .main-content .bottom-content .text-content {
-        width: 210px;
+        width: 24%;
+
        
     }
     .main-content .bottom-content{
-        width: 800px;
+        width: 100%;
         justify-content: space-around;
+
     }
     .contact{
-        width: 800px;
-        padding-left: 20px;
+        max-width: 90%;
+        margin-left: 5%;
+        margin-right: 5%;
+        padding-left: 0%;
+
     }
 }
+/* mobile view start here */
 @media only screen and (max-width: 500px) {  
+    /* change flex to colum so the nav organzie by column */
         header nav{
-            width: 500;
+            max-width: 100%;
             flex-direction: column;
         }
         header{
             display: flex;
             flex-direction: column;
-            width: 500px;
+            max-width: 100%;
         }
+        /* added bottom and top border, position to the middle of the page */
         header nav a{
             border-top: solid 1px;
-            width: 500px;
-            font-size: 24pt;
-            padding-left: 200px;
+            max-width: 100%;
+            font-size: 2.4rem;
+            text-align: center;
             padding-top: 20px;
             padding-bottom: 20px;
         }
@@ -259,53 +295,60 @@ h1, h2, h3, h4, h5 {
             border-bottom: 1px solid;
         }
         .cta{
-            width: 500px;
+            max-width: 100%;
         }
         .container{
-            width: 500px;
+           max-width: 100%;
             margin: 0 auto;
         }
         .main-content{
-            width: 500px;
+            max-width: 100%;
             display: flex;
             flex-direction: column;
         }
         .contact{
-            width: 500px;
+            max-width: 90%;
+            margin-left: 5%;
+            margin-right: 5%;
+            padding-left: 0%;
         }
         footer{
-            width: 500px;
+            max-width: 100%;
         }
         .middle-img{
-            width: 450px;
+            width: 80%;
             height: auto;
-            margin-right: 10px;
-            margin-left:10px;
+            padding-right: 4%;
+
+            margin-left: 0%;
         }
 
         .main-content .top-content{
             display: flex;
             flex-direction: column;
-            width: 500px;
+            max-width: 90%;
+            margin-right: 5%;
+            margin-left:5%;
         }
         .main-content .top-content .text-content{
-            width: 450px;
+            width: 90%;
             margin-bottom: 20px;
-            padding-left: 10px;
+
 
         }
         .main-content .bottom-content{
             display: flex;
             flex-direction: column;
-            width: 500px;
+            max-width: 90%;
+            margin-right: 5%;
+            margin-left:5%;
         }
         .main-content .bottom-content .text-content{
-            width: 450px;
+            width: 90%;
             margin-bottom: 20px;
-            padding-left: 10px;
 
         }
         .cta{
-            width:500px;
+            max-width:100%;
         }
 }
